--- a/src/shared/style/style.scss
+++ b/src/shared/style/style.scss
@@ -1,3 +1,5 @@
 @import './common/common.scss';
 @import './pages/Fuel-calculator/index.scss';
 @import './widgets/Navigation/index.scss';
+@import './widgets/FuelForm/index.scss';
+@import './widgets/CalculationResults/index.scss';
