--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    max-width: 560px;
+    min-width: 320px;
     margin: 0 auto;
     height: 100vh;
     font-family: 'Rubik', sans-serif;
