--- a/src/shared/style/widgets/FuelForm/index.scss
+++ b/src/shared/style/widgets/FuelForm/index.scss
@@ -1,4 +1,6 @@
 .fuel {
+    display: flex;
+    margin: 0 auto;
     .fuel__content {
         .fuel__form {
             display: flex;
@@ -6,5 +8,10 @@
             gap: 20px;
             margin-bottom: 35px;
         }
+    }
+
+    @media (min-width: 1240px) {
+        padding-top: 50px;
+        max-width: 560px;
     }
 }
