--- a/src/shared/style/style.scss
+++ b/src/shared/style/style.scss
@@ -1,7 +1,10 @@
 @import './common/common.scss';
 @import './pages/Fuel-calculator/index.scss';
 @import './pages/Home/index.scss';
+@import './pages/CarNote/index.scss';
 @import './widgets/Navigation/index.scss';
 @import './widgets/Header/index.scss';
 @import './widgets/FuelForm/index.scss';
+@import './widgets/NotesForm/index.scss';
 @import './widgets/CalculationResults/index.scss';
+@import './widgets/CarNotes/index.scss'
