--- a/src/shared/style/pages/CarNote/index.scss
+++ b/src/shared/style/pages/CarNote/index.scss
@@ -23,6 +23,7 @@
             width: 100%;
             display: flex;
             flex-flow: row wrap;
+            justify-content: center;
        }
     }
 }
