--- a/src/shared/style/widgets/FuelForm/index.scss
+++ b/src/shared/style/widgets/FuelForm/index.scss
@@ -3,4 +3,26 @@
     flex-direction: column;
     gap: 20px;
     margin-bottom: 35px;
+
+    .form-control {
+        &:focus { 
+            border-color: $colorRed;
+            -webkit-box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+            -moz-box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+            box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+        }
+    }
+
+    .form__button {
+        background-color: transparent;
+        color: $colorBlack;
+        border: none;
+        outline: 1px solid $colorRed;
+
+        &:hover {
+            -webkit-box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+            -moz-box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+            box-shadow: 0px 0px 8px 5px rgba(255, 0, 90, 0.2);
+        }
+    }
 }
