--- a/src/shared/style/common/common.scss
+++ b/src/shared/style/common/common.scss
@@ -1,4 +1,4 @@
 @import './colorize.scss';
 @import './fonts.scss';
 @import './mixins.scss';
-@import './normalize.scss'
+@import './normalize.scss';
