--- a/src/shared/style/style.scss
+++ b/src/shared/style/style.scss
@@ -7,4 +7,4 @@
 @import './widgets/FuelForm/index.scss';
 @import './widgets/NotesForm/index.scss';
 @import './widgets/CalculationResults/index.scss';
-@import './widgets/CarNotes/index.scss'
+@import './widgets/CarNotes/index.scss';
